# rust-weather-spiral

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
data/: cities.json  weather.bundle.cbor
rust/weather-engine/: Cargo.toml
rust/weather-engine/src/: colour.rs  data.rs  daylight.rs  draw.rs  effect.rs  engine.rs  event.rs  frame.rs  geometry.rs  lib.rs  num.rs  protocol.rs  spiral.rs  state.rs  typegen.rs  update.rs  view_mode.rs  view_model.rs  views.rs
scripts/: build-weather-cbor.mjs  fetch-open-meteo.mjs  validate-cbor.mjs  validate-data.mjs
src/: app.tsx  effects.ts  styles.css
src/data/: load-weather-bundle.ts
src/debug/: wire-debug.ts
src/protocol/: types.ts
src/runtime/: empty-view-model.ts  use-weather-spiral.ts
src/ui/: SpiralCanvas.tsx  StatusScreen.tsx  WeatherView.tsx
src/ui/components/: CityPicker.tsx  DebugPanel.tsx  Legend.tsx  MetricTabs.tsx  ViewModePicker.tsx  ZoomControl.tsx
src/worker/: app-worker.ts  drain-presentation-effects.ts  geometry-wire.ts  spiral-canvas.ts  timings.ts  weather-client.ts
src/worker/__tests__/: worker.test.ts
